Finish All Pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <link rel="icon" href="assets/svg/logo-fp12.svg" />
         <link rel="stylesheet" href="src/css/style.css" />
-
         <link
             rel="stylesheet"
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -47,6 +47,7 @@
                 <div class="nav-btns">
                     <a
                         href="https://docs.google.com/forms/d/e/1FAIpQLScbzpM7zbUCjEdAmM71S8869TkVmk698YKVDysItlA7z0vyWg/viewform"
+                        target="_blank"
                         class="join-btn"
                     >
                         Join Competition</a
@@ -86,8 +87,9 @@
                         <div class="home-btns">
                             <a
                                 href="https://docs.google.com/forms/d/e/1FAIpQLScbzpM7zbUCjEdAmM71S8869TkVmk698YKVDysItlA7z0vyWg/viewform"
+                                target="_blank"
                                 class="home-join-btn"
-                                >Daftar Sekarang
+                                ><b>Daftar Sekarang</b>
                                 <i class="uil uil-import join-icon"></i
                             ></a>
                         </div>
@@ -96,6 +98,7 @@
             </section>
 
             <!-- =================================== Falcon Talks =================================== -->
+
             <section class="falcontalks section" id="falcontalks">
                 <div class="container falcontalks-content">
                     <div class="falcontalks-img">
@@ -112,7 +115,7 @@
                                 Dengan Pembicara yang handal Falcon Talkshow 12
                             </h4>
                         </div>
-                        <div class="section-desc">
+                        <div class="section-desc justify-text">
                             Falcon Talks adalah rangkaian acara dari Falcon
                             Project 12, yang dimana penyelenggara acara akan
                             mengundang pembicara-pembicara handal pada bidangnya
@@ -137,11 +140,6 @@
                             <h4 class="section-subtitle">
                                 Cabang Lomba Falcon Project 12
                             </h4>
-                        </div>
-                        <div class="section-desc">
-                            Lorem ipsum is placeholder text commonly used in the
-                            graphic, print, and publishing industries for
-                            previewing layouts and visual mockups.
                         </div>
                     </div>
                     <div class="competition-list z-top">
@@ -255,6 +253,7 @@
                     </div>
                     <a
                         href="https://docs.google.com/forms/d/e/1FAIpQLScbzpM7zbUCjEdAmM71S8869TkVmk698YKVDysItlA7z0vyWg/viewform"
+                        target="_blank"
                         class="competition-btn z-top"
                         >Join Competition</a
                     >
@@ -272,9 +271,7 @@
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Falcon Project 12 akan diadakan mulai dari opening
-                            hingga closing yang diselenggarakan pada tanggal
-                            berikut ini:
+                            Falcon Project 12 akan diadakan pada
                         </div>
                     </div>
                     <div class="timeline-main">
@@ -284,14 +281,23 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">8 Oktober</div>
+                            <div class="timeline-item-date">1 Nov</div>
                         </div>
                         <div class="timeline-item">
-                            <h4 class="timeline-item-title">Falcon Talks</h4>
+                            <h4 class="timeline-item-title">Falcon Talkshow</h4>
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">28 Oktober</div>
+                            <div class="timeline-item-date">3 Nov</div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Escape Room & Exhibition
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">7 Okt - 11 Sep</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">Competition</h4>
@@ -299,7 +305,7 @@
                                 <div class="timeline-rounded-center"></div>
                             </span>
                             <div class="timeline-item-date">
-                                10 Sep - 11 Okt
+                                24 Okt - 11 Nov
                             </div>
                         </div>
                         <div class="timeline-item">
@@ -307,7 +313,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">17 Oktober</div>
+                            <div class="timeline-item-date">12 Nov</div>
                         </div>
                     </div>
                 </div>
@@ -327,43 +333,58 @@
                     <div class="faq-main">
                         <div class="faq-item">
                             <p class="faq-question">
-                                Media apa yang akan digunakan saat lomba?
+                                Apa itu Falcon Project 12?
                             </p>
                             <div class="faq-answer-wrapper">
                                 <p class="faq-answer">
-                                    Media yang akan digunakan berupa video
-                                    conferance, ketentuan lebih lanjut akan
-                                    dijelaskan pada Technical Meeting dan
-                                    Guidebook.
+                                    Falcon Project 12 adalah sebuah
+                                    <i>Event IT</i> yang diadakan oleh Fakultas
+                                    <i
+                                        >School of Information Science and
+                                        Technology </i
+                                    >(SISTech) UPH.
                                 </p>
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <p class="faq-question">
-                                Bagaimana cara pemberian reward pada pemenang
-                                lomba yang berada diluar daerah?
+                                Apakah kompetisi Falcon Project 12 diadakan
+                                secara online atau onsite?
                             </p>
                             <div class="faq-answer-wrapper">
                                 <p class="faq-answer">
-                                    Media yang akan digunakan berupa video
-                                    conferance, ketentuan lebih lanjut akan
-                                    dijelaskan pada Technical Meeting dan
-                                    Guidebook.
+                                    Seluruh babak penyisihan lomba yang diadakan
+                                    akan dilaksanakan secara <i>online</i>, dan
+                                    seluruh <b>Babak Final</b> akan dilaksanakan
+                                    secara <i>on-site</i>, di Universitas Pelita
+                                    Harapan Main Campus, Lippo Village.
                                 </p>
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <p class="faq-question">
-                                Media apa yang akan digunakan saat lomba?
+                                Apakah boleh mengikuti beberapa lomba?
                             </p>
                             <div class="faq-answer-wrapper">
                                 <p class="faq-answer">
-                                    Media yang akan digunakan berupa video
-                                    conferance, ketentuan lebih lanjut akan
-                                    dijelaskan pada Technical Meeting dan
-                                    Guidebook.
+                                    Ya, peserta dapat mengikuti lebih dari satu
+                                    lomba.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="faq-item">
+                            <p class="faq-question">
+                                Apakah peserta wajib mengikuti
+                                <i>Close Night?</i>
+                            </p>
+                            <div class="faq-answer-wrapper">
+                                <p class="faq-answer">
+                                    Ya, peserta berhasil menjadi juara
+                                    diwajibkan untuk mengikuti
+                                    <i>Closing Night</i>.
                                 </p>
                             </div>
                         </div>
@@ -376,53 +397,32 @@
                 <div class="container sponsor-content box-container-second">
                     <div class="sponsor-data">
                         <div class="sponsor-title">
-                            <div class="section-title">
-                                SPONSOR & PARTNERSHIP
-                            </div>
+                            <div class="section-title">SPONSOR</div>
+                            <div class="section-subtitle">Our Sponsor</div>
+                        </div>
+                    </div>
+                    <div class="sponsor-main">
+                        <div class="sponsor-item">
+                            <!-- <img src="assets/img/Logo HMP/HMFH.png" alt="" /> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- =================================== Falcon Media Partner =================================== -->
+            <div class="section sponsor section-gap">
+                <div class="container sponsor-content box-container-second">
+                    <div class="sponsor-data">
+                        <div class="sponsor-title">
+                            <div class="section-title">MEDIA PARTNER</div>
                             <div class="section-subtitle">
-                                Our Sponsor and Partnership
+                                Our Media Partner
                             </div>
                         </div>
                     </div>
                     <div class="sponsor-main">
                         <div class="sponsor-item">
-                            <img src="assets/img/Logo HMP/HMFH.png" alt="" />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="assets/img/Logo HMP/HMPS_INFORMATIKA 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="assets/img/Logo HMP/HMPS_Pendidikan Ekonomi 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="assets/img/Logo HMP/HMPS_MatematikaTerapan 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="assets/img/Logo HMP/HMPS_Pendidikan Bahasa Indonesia 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
-                                alt=""
-                            />
+                            <!-- <img src="assets/img/Logo HMP/HMFH.png" alt="" /> -->
                         </div>
                     </div>
                 </div>
@@ -438,20 +438,24 @@
                 <div class="footer-items">
                     <div class="footer-item">
                         <a href="#" class="footer-item-title">Falcon Talks</a>
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#falcontalks" class="footer-item-subitem"
                             >Falcon Talkshow</a
                         >
                     </div>
                     <div class="footer-item">
-                        <a href="#" class="footer-item-title">Competition</a>
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#competition" class="footer-item-title"
+                            >Competition</a
+                        >
+                        <a href="#competition" class="footer-item-subitem"
                             >Falcon Web Design</a
                         >
-                        <a href="#" class="footer-item-subitem">Falcon Logic</a>
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#competition" class="footer-item-subitem"
+                            >Falcon Logic</a
+                        >
+                        <a href="#competition" class="footer-item-subitem"
                             >Falcon Business Proposal</a
                         >
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#competition" class="footer-item-subitem"
                             >Falcon Proggraming</a
                         >
                     </div>
@@ -463,22 +467,39 @@
                 </div>
             </div>
             <div class="footer-sosmed">
-                <div class="footer-icon-wrapper">
+                <a
+                    href="https://www.instagram.com/falconprojectuph/"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
                     <i class="uil uil-instagram-alt footer-icon"></i>
                     <p class="footer-icon-title">Instagram</p>
-                </div>
-                <div class="footer-icon-wrapper">
-                    <i class="uil uil-twitter footer-icon"></i>
-                    <p class="footer-icon-title">Twitter</p>
-                </div>
-                <div class="footer-icon-wrapper">
+                </a>
+
+                <a
+                    href="https://line.me/ti/p/~@dpt6203g"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
                     <i class="uil uil-line footer-icon"></i>
                     <p class="footer-icon-title">Line</p>
-                </div>
-                <div class="footer-icon-wrapper">
+                </a>
+                <a
+                    href="https://www.youtube.com/channel/UCRBJ0VgC83JidBvAix3I2Kg"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
                     <i class="uil uil-youtube footer-icon"></i>
                     <p class="footer-icon-title">Youtube</p>
-                </div>
+                </a>
+                <a
+                    href="https://www.linkedin.com/school/universitas-pelita-harapan-main-campus/"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
+                    <i class="uil uil-linkedin footer-icon"></i>
+                    <p class="footer-icon-title">LinkedIn</p>
+                </a>
             </div>
         </footer>
 
