--- a/src/pages/falcon-logic.html
+++ b/src/pages/falcon-logic.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <link rel="icon" href="../../assets/svg/logo-fp12.svg" />
         <link rel="stylesheet" href="../../src/css/style.css" />
-
         <link
             rel="stylesheet"
             href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -27,7 +27,7 @@
                     <a href="../../index.html#competition" class="join-btn"
                         >Home</a
                     >
-                    <div class="nav-toggle" id="nav-toggle">
+                    <div class="nav-toggle d-none" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
             <!-- =================================== Home =================================== -->
             <div class="contest-home" id="contest-home">
                 <div
-                    class="container box-container-second contest-home-content"
+                    class="container box-container-second box-container-contest box-container-contest contest-home-content"
                 >
                     <div class="contest-home-data-wrapper">
                         <div class="contest-home-data">
@@ -80,11 +80,15 @@
                             <div class="contest-home-btns">
                                 <a
                                     href="https://docs.google.com/forms/d/e/1FAIpQLScbzpM7zbUCjEdAmM71S8869TkVmk698YKVDysItlA7z0vyWg/viewform"
+                                    target="_blank"
                                     class="contest-home-btn btn"
                                     >Daftar Sekarang</a
                                 >
-                                <a href="#" class="contest-home-btn-second btn"
-                                    >Download Guidebook</a
+                                <a
+                                    href="https://drive.google.com/file/d/1yr84POm9m-02BxCUgD7WiVxZCei9AMGa/view?usp=sharing"
+                                    target="_blank"
+                                    class="contest-home-btn-second btn"
+                                    >Download Rulebook</a
                                 >
                             </div>
                         </div>
@@ -104,14 +108,11 @@
                         <div class="timeline-title">
                             <div class="section-title">TIMELINE</div>
                             <div class="section-subtitle">
-                                Tahapan Lomba Falcon Project 12
+                                Timeline Falcon Logic Competition
                             </div>
                         </div>
                         <div class="section-desc timeline-desc">
-                            Tahapan Lomba Falcon Project 12 terdiri dari
-                            pendaftaran, Babak Penyisian, dan Babak Final
-                            (on-site), dan diselengarakan pada waktu yang telah
-                            ditentukan, sebagai berikut:
+                            Tahapan Lomba Falcon Logic Competition terdiri dari
                         </div>
                     </div>
                     <div class="timeline-main">
@@ -141,9 +142,25 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">
-                                24 Oct - 30 Okt
-                            </div>
+                            <div class="timeline-item-date">26 Oct</div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Pengumuman Lolos Seleksi
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">3 Nov</div>
+                        </div>
+                        <div class="timeline-item">
+                            <h4 class="timeline-item-title">
+                                Technical Meeting
+                            </h4>
+                            <span class="timeline-rounded">
+                                <div class="timeline-rounded-center"></div>
+                            </span>
+                            <div class="timeline-item-date">5 Nov</div>
                         </div>
                         <div class="timeline-item">
                             <h4 class="timeline-item-title">
@@ -152,7 +169,7 @@
                             <span class="timeline-rounded">
                                 <div class="timeline-rounded-center"></div>
                             </span>
-                            <div class="timeline-item-date">7 Nov - 11 Nov</div>
+                            <div class="timeline-item-date">7 Nov & 8 Nov</div>
                         </div>
                     </div>
                 </div>
@@ -172,9 +189,7 @@
                         </div>
                         <p class="section-desc">
                             Adapun rincian harga pendaftaran dari lomba
-                            <b><i>Falcon Logic Competition</i></b> yang dimulai
-                            dari harga Early Bird, setelah ditutup akan dibuka
-                            harga normal, sebagai berikut ini:
+                            <b><i>Falcon Logic Competition</i></b>
                         </p>
                     </div>
 
@@ -261,56 +276,32 @@
                 <div class="container sponsor-content box-container-second">
                     <div class="sponsor-data">
                         <div class="sponsor-title">
-                            <div class="section-title">
-                                SPONSOR & PARTNERSHIP
-                            </div>
+                            <div class="section-title">SPONSOR</div>
+                            <div class="section-subtitle">Our Sponsor</div>
+                        </div>
+                    </div>
+                    <div class="sponsor-main">
+                        <div class="sponsor-item">
+                            <!-- <img src="assets/img/Logo HMP/HMFH.png" alt="" /> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- =================================== Falcon Media Partner =================================== -->
+            <div class="section sponsor section-gap">
+                <div class="container sponsor-content box-container-second">
+                    <div class="sponsor-data">
+                        <div class="sponsor-title">
+                            <div class="section-title">MEDIA PARTNER</div>
                             <div class="section-subtitle">
-                                Our Sponsor and Partnership
+                                Our Media Partner
                             </div>
                         </div>
                     </div>
                     <div class="sponsor-main">
                         <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMFH.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMPS_INFORMATIKA 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMPS_Pendidikan Ekonomi 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMPS_MatematikaTerapan 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMPS_Pendidikan Bahasa Indonesia 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
-                                alt=""
-                            />
-                        </div>
-                        <div class="sponsor-item">
-                            <img
-                                src="../../assets/img/Logo HMP/HMPS_PGSD[1] 1.png"
-                                alt=""
-                            />
+                            <!-- <img src="assets/img/Logo HMP/HMFH.png" alt="" /> -->
                         </div>
                     </div>
                 </div>
@@ -320,30 +311,30 @@
         <footer class="footer">
             <div class="footer-main">
                 <a href="#" class="footer-logo-wrapper">
-                    <img
-                        src="../../assets/img/Logo.png"
-                        class="footer-logo"
-                        alt=""
-                    />
+                    <img src="assets/img/Logo.png" class="footer-logo" alt="" />
                     <h2 class="footer-logo-title">Falcon Project 12</h2>
                 </a>
                 <div class="footer-items">
                     <div class="footer-item">
                         <a href="#" class="footer-item-title">Falcon Talks</a>
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#falcontalks" class="footer-item-subitem"
                             >Falcon Talkshow</a
                         >
                     </div>
                     <div class="footer-item">
-                        <a href="#" class="footer-item-title">Competition</a>
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#competition" class="footer-item-title"
+                            >Competition</a
+                        >
+                        <a href="#competition" class="footer-item-subitem"
                             >Falcon Web Design</a
                         >
-                        <a href="#" class="footer-item-subitem">Falcon Logic</a>
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#competition" class="footer-item-subitem"
+                            >Falcon Logic</a
+                        >
+                        <a href="#competition" class="footer-item-subitem"
                             >Falcon Business Proposal</a
                         >
-                        <a href="#" class="footer-item-subitem"
+                        <a href="#competition" class="footer-item-subitem"
                             >Falcon Proggraming</a
                         >
                     </div>
@@ -355,22 +346,39 @@
                 </div>
             </div>
             <div class="footer-sosmed">
-                <div class="footer-icon-wrapper">
+                <a
+                    href="https://www.instagram.com/falconprojectuph/"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
                     <i class="uil uil-instagram-alt footer-icon"></i>
                     <p class="footer-icon-title">Instagram</p>
-                </div>
-                <div class="footer-icon-wrapper">
-                    <i class="uil uil-twitter footer-icon"></i>
-                    <p class="footer-icon-title">Twitter</p>
-                </div>
-                <div class="footer-icon-wrapper">
+                </a>
+
+                <a
+                    href="https://line.me/ti/p/~@dpt6203g"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
                     <i class="uil uil-line footer-icon"></i>
                     <p class="footer-icon-title">Line</p>
-                </div>
-                <div class="footer-icon-wrapper">
+                </a>
+                <a
+                    href="https://www.youtube.com/channel/UCRBJ0VgC83JidBvAix3I2Kg"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
                     <i class="uil uil-youtube footer-icon"></i>
                     <p class="footer-icon-title">Youtube</p>
-                </div>
+                </a>
+                <a
+                    href="https://www.linkedin.com/school/universitas-pelita-harapan-main-campus/"
+                    class="footer-icon-wrapper"
+                    target="_blank"
+                >
+                    <i class="uil uil-linkedin footer-icon"></i>
+                    <p class="footer-icon-title">LinkedIn</p>
+                </a>
             </div>
         </footer>
 
